# dsdana

./: .gitignore  DataFormat.md  Makefile  README.md  this.sh
example/: ql.sh  run_ana.sh  run_ana_detail.sh
example/dsdana/for_pol5_calfunc/: analysis.sh  example_data_cc_detailed_hittree.root
example/dsdana/for_spline_calfunc/: example_hittree.root  ql.sh
example/for_pol5_calfunc/: analysis.sh  database_cc.txt  example_data_cc.root
example/for_spline_calfunc/: database.root  detail_analysis.sh
share/dsdana/example/: analysis  detail_analysis.sh
share/dsdana/example_spline/: example_hittree.root
share/dsdana/tools/: eventtree.com
source/: ApplyDatabase.cpp  ApplyDatabase.hpp  ApplyDatabaseText.cpp  ApplyDatabaseText.hpp  CMakeLists.txt  CoupleHit.cpp  CoupleHit.hpp  CoupleHitText.cpp  CoupleHitText.hpp  MergeAdjacent.cpp  MergeAdjacent.hpp  MergeAdjacentText.cpp  MergeAdjacentText.hpp  ReadDatabase.cpp  ReadDatabase.hpp  ReadDatabaseText.cpp  ReadDatabaseText.hpp  ReadEventtree.cpp  ReadEventtree.cpp_old  ReadEventtree.hpp  ReadEventtree.hpp_old  WriteHittree.cpp  WriteHittree.hpp  WriteHittreeAll.cpp  WriteHittreeAll.hpp  main.cpp
tools/: Makefile  this.sh
tools/macro/: detector_info.hpp
tools/script/: hittree.com
tools/source/: DatabaseMaker.cpp  DatabaseMaker.hpp  branch_info.hpp  make_code.hpp  make_database.cpp  mkanlmodule.cpp  mkanlmodule.hpp  mkdatabase.cpp  mkdsddb  mkreadtree.cpp  mkreadtree.hpp  mkwritetree.cpp  mkwritetree.hpp
